<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fondo_amarillo"
    tools:context=".ui.SelectLevelActivity">

    <!-- Main AppBar -->

    <include
        android:id="@+id/main_bar"
        layout="@layout/app_bar_main"
    />

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/alefbold"
        android:gravity="center"
        android:text="@string/select_level"
        android:textSize="@dimen/bigSizeTextFont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_bar">
    </TextView>

    <RelativeLayout
        android:id="@+id/levelChooseLayout"
        android:layout_width="351dp"
        android:layout_height="406dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/fondo_ganar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/easy_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="142dp"
            android:text="@string/Easy"
            android:textSize="@dimen/appDefaultTextSize" />

        <Switch
            android:id="@+id/easy_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="86dp"
            android:layout_marginTop="144dp"
            android:layout_marginEnd="40dp"
            android:layout_toEndOf="@+id/easy_txt"
            android:checked="true"
            android:onClick="setLevelGame"
            tools:checked="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/medium_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/easy_txt"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/Medium"
            android:textSize="@dimen/appDefaultTextSize" />

        <Switch
            android:id="@+id/medium_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/easy_switch"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="40dp"
            android:layout_toEndOf="@+id/medium_txt"
            android:onClick="setLevelGame"
            android:enabled="false"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/hard_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/medium_txt"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/Hard"
            android:textSize="@dimen/appDefaultTextSize" />

        <Switch
            android:id="@+id/hard_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/medium_switch"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="75dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="40dp"
            android:layout_toEndOf="@+id/hard_text"
            android:onClick="setLevelGame"
            android:enabled="false"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/AppRedButton"
        android:onClick="goToImageSelectionActivity"
        android:layout_marginTop="20dp"
        android:text="@string/play_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelChooseLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>
